# akari

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/client/src/commands/: connect.rs  create.rs  delete.rs  error.rs  kill.rs  spec.rs  start.rs  state.rs
crates/libakari/: Cargo.toml
crates/libakari/src/: agent.rs  agent_api.rs  api.rs  container_rpc.rs  lib.rs  path.rs  vm_config.rs  vm_rpc.rs
crates/protos/: Cargo.toml  build.rs
crates/protos/src/: lib.rs  types.rs  vm.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  vmm.rs
crates/server/src/vmm/: config.rs  queue.rs  vm.rs
crates/shim/: Cargo.toml
crates/shim/src/: main.rs  service.rs  task.rs
crates/vmm/: Cargo.toml
crates/vmm/src/: config.rs  lib.rs  queue.rs  vm.rs
src/: api.rs  commands.rs  lib.rs  macosvm.rs  main.rs  path.rs  traits.rs  vmm.rs
src/commands/: connect.rs  create.rs  delete.rs  error.rs  kill.rs  start.rs  state.rs
src/macosvm/: builder.rs  create.rs
src/vmm/: api.rs  config.rs  create.rs  start.rs  vm.rs
