[workspace]
members = [
    "crates/agent",
    "crates/client",
    "crates/libakari",
    "crates/server",
    "crates/shim",
    "crates/vmm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
clap = { version = "4.5.29", features = ["derive"] }
containerd-shim-protos = { version = "0.7.0", features = ["async"] }
containerd-shim = { version = "0.7.1", features = ["async"] }
env_logger = "0.11.5"
futures = "0.3"
futures-util = "0.3"
liboci-cli = "0.3.3"
log = "0.4.25"
oci-spec = "0.6.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread"] }
ttrpc = { version = "0.8.4", features = ["async"] }

# containerd-shim = { path = "../../../rust-extensions/crates/shim", features = [
#     "async",
# ] }
