[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
oci-spec.workspace = true
serde.workspace = true
serde_json.workspace = true

vsock = { git = "https://github.com/rust-vsock/vsock-rs", rev = "2223f5a" }

libakari = { path = "../libakari" }
