[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
containerd-shim.workspace = true
env_logger.workspace = true
liboci-cli.workspace = true
oci-spec.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
ttrpc.workspace = true

libakari = { path = "../libakari" }
