[package]
name = "libakari"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tarpc.workspace = true
thiserror.workspace = true
