[package]
name = "protos"
version.workspace = true
edition.workspace = true

[features]
default = ["async"]
async = ["ttrpc/async", "async-trait"]

[dependencies]
async-trait = { workspace = true, optional = true }
protobuf = "3.1"
ttrpc.workspace = true

[build-dependencies]
ttrpc-codegen = "0.4.2"
