[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
oci-spec.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
ttrpc.workspace = true

libakari = { path = "../libakari" }
protos = { path = "../protos" }
vmm = { path = "../vmm" }
