[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
containerd-shim.workspace = true
containerd-shim-protos.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
oci-spec.workspace = true
thiserror.workspace = true
tokio.workspace = true
ttrpc.workspace = true

libakari = { path = "../libakari" }
vmm = { path = "../vmm" }
