[package]
name = "containerd-shim-akari-v2"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
containerd-shim.workspace = true
log.workspace = true
oci-spec.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

libakari = { path = "../libakari" }
vmm = { path = "../vmm" }
