[package]
name = "containerd-shim-akari-v2"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
containerd-shim.workspace = true
# containerd-shim-logging.workspace = true
log.workspace = true
oci-spec.workspace = true
thiserror.workspace = true
tokio.workspace = true
ttrpc.workspace = true

libakari = { path = "../libakari" }
vmm = { path = "../vmm" }
