[package]
name = "vmm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true

base64 = "0.22.1"

libakari = { path = "../libakari" }

block2 = { git = "https://github.com/madsmtm/objc2" }
objc2 = { git = "https://github.com/madsmtm/objc2" }
objc2-foundation = { git = "https://github.com/madsmtm/objc2", features = [
    "block2",
    "NSArray",
    "NSData",
    "NSError",
    "NSFileHandle",
    "NSString",
    "NSURL",
] }
objc2-virtualization = { git = "https://github.com/madsmtm/objc2", features = [
    "all",
] }
